// =====================================================================
// Servi Elec Manager — Modelo Entidad-Relación (DBML)
// Generado el 2026-06-16 | Compatible con https://dbdiagram.io
// Refleja el estado de la BD tras las migraciones 01 al 24.
// =====================================================================


// ─── USUARIOS ────────────────────────────────────────────────────────

// Usuarios del sistema (administradores y superadmins).
// Nuevos registros entran como 'pendiente'; un SuperAdmin los aprueba.
// rol: 'S' = SuperAdmin, 'A' = Administrador ('T' existe en constraint pero no se usa).
Table usuario {
  id_usuario     varchar(15)  [pk, note: "UUID hex truncado a 15 chars"]
  nombre_usuario varchar(50)  [not null]
  correo         varchar(40)  [not null, unique]
  password_hash  varchar(255) [not null]
  rol            char(1)      [not null, default: "A", note: "S=SuperAdmin, A=Administrador"]
  estado         varchar(20)  [not null, default: "pendiente", note: "pendiente | aprobado"]
}


// ─── INVENTARIO ──────────────────────────────────────────────────────

// Categorías de materiales del inventario (ej: Cables, Interruptores).
Table categoria {
  id_categoria     varchar(20) [pk]
  nombre_categoria varchar(50) [not null, unique]
}

// Materiales del inventario. Cada uno pertenece a una categoría.
// precio_sodimac_actual se actualiza automáticamente via scraper.
Table material {
  id_material                varchar(20)   [pk]
  nombre_material            varchar(50)   [not null]
  descripcion                varchar(250)
  stock_actual               integer       [not null, default: 0, note: "CHECK >= 0"]
  stock_critico              integer       [not null, default: 0, note: "Mínimo antes de alerta"]
  precio_unitario            numeric(9,2)  [not null, default: 0, note: "CHECK >= 0"]
  categoria_id               varchar(20)   [not null, ref: > categoria.id_categoria]
  precio_sodimac_actual      numeric(12,2) [note: "Último precio scrapeado"]
  precio_sodimac_actualizado timestamp     [note: "Fecha del último scraping"]
  unidad_compra              varchar(20)   [not null, default: "unidad", note: "unidad|metro|rollo|kilo|litro"]
}

// Historial de precios scrapeados desde Sodimac/Easy para cada material.
// Permite detectar outliers (es_outlier=true) y analizar tendencias.
Table material_precio_historico {
  id_pmh      varchar(32)  [pk]
  material_id varchar(20)  [not null, ref: > material.id_material]
  precio      numeric(12,2)[not null]
  fuente      varchar(20)  [not null, note: "sodimac | manual"]
  tienda      varchar(20)  [default: "Sodimac", note: "Sodimac | Easy"]
  es_outlier  boolean      [not null, default: false]
  fecha       timestamp    [not null, note: "DEFAULT CURRENT_TIMESTAMP"]
}

// Movimientos de stock. Registra entradas y salidas de materiales.
// Nota: el campo tipo (entrada/salida) se infiere del contexto (proyecto asociado).
Table movimiento {
  id_movimiento varchar(100) [pk]
  cantidad      integer      [not null, note: "CHECK > 0"]
  fecha_salida  timestamp    [not null, note: "DEFAULT CURRENT_TIMESTAMP"]
  proyecto_id   varchar(20)  [not null, ref: > proyecto.id_proyecto]
  material_id   varchar(20)  [not null, ref: > material.id_material]
  usuario_id    varchar(15)  [not null, ref: > usuario.id_usuario]
}


// ─── PLANTILLAS ──────────────────────────────────────────────────────

// Categorías dinámicas para plantillas de servicio (usadas en el menú del chatbot).
// Las categorías de inventario (tabla categoria) son independientes de esta tabla.
Table categoria_plantilla {
  id_categoria   varchar(32) [pk, note: "Ej: cat_instalaciones"]
  nombre         varchar(80) [not null, unique]
  activa         boolean     [not null, default: true]
  fecha_creacion timestamp   [default: "CURRENT_TIMESTAMP"]
}

// Plantillas de servicio. Define los trabajos estandarizados que ofrece Servi Elec.
// Las columnas *_default son valores sugeridos al crear proyectos desde el chatbot.
// Las columnas *_minimos son validaciones mínimas en el flujo del chatbot.
// NOTA: categoria es un string libre (no FK a categoria_plantilla, sino match por nombre).
Table plantilla {
  id_plantilla          varchar(20)  [pk]
  nombre_servicio       varchar(60)  [not null, unique]
  descripcion           varchar(200)
  materiales_sugeridos  text         [note: "Legado — usar plantilla_material en su lugar"]
  precio_estimado       numeric(9,2) [note: "CHECK >= 0"]
  categoria             varchar(40)  [note: "Nombre libre — debe coincidir con categoria_plantilla.nombre"]
  activa                boolean      [not null, default: true]
  dias_default          integer      [default: 1]
  horas_diarias_default integer      [default: 8]
  trabajadores_default  integer      [default: 1]
  dias_minimos          integer      [default: 1,  note: "Mínimo aceptado por el bot (nunca NULL tras mig 24)"]
  horas_minimas         integer      [default: 1,  note: "Mínimo aceptado por el bot (nunca NULL tras mig 24)"]
}

// Tabla puente N:N entre plantillas y materiales.
// Permite definir qué materiales y en qué cantidad requiere cada servicio.
Table plantilla_material {
  plantilla_id      varchar(20)  [not null, ref: > plantilla.id_plantilla]
  material_id       varchar(20)  [not null, ref: > material.id_material]
  cantidad_sugerida numeric(9,2) [not null, note: "CHECK > 0"]
  unidad            varchar(15)  [not null]

  indexes {
    (plantilla_id, material_id) [pk]
  }
}


// ─── PROYECTOS ───────────────────────────────────────────────────────

// Zonas de distancia para calcular costo de bencina del técnico.
// Base geográfica: La Calera, Paradero 26, Quinta Región.
Table comuna_grupo {
  id_cg         varchar(32) [pk, note: "Ej: zona_01_local"]
  nombre        varchar(80) [not null, note: "Ej: Local (0-15 km)"]
  descripcion   text
  rango_km_min  integer     [not null]
  rango_km_max  integer     [not null]
  precio_por_km integer     [not null, note: "$105 CLP/km (diesel)"]
}

// Proyectos/trabajos de Servi Elec. Pueden crearse manualmente o desde el chatbot.
// estado: pendiente → en_curso → finalizado | cancelado.
// Las columnas de costos (mig 15+18) se usan para calcular presupuesto total estimado.
Table proyecto {
  id_proyecto           varchar(20)  [pk]
  nombre_proyecto       varchar(50)  [not null]
  tipo_proyecto         varchar(25)
  nombre_cliente        varchar(50)  [not null]
  telefono_cliente      varchar(20)
  direccion_cliente     varchar(150)
  fecha_inicio          date         [default: "CURRENT_DATE"]
  estado                varchar(10)  [not null, default: "pendiente", note: "pendiente|en_curso|finalizado|cancelado"]
  presupuesto_estimado  numeric(9,2) [note: "CHECK >= 0"]
  presupuesto_final     numeric(9,2) [note: "CHECK >= 0"]
  fecha_termino_maximo  date
  plantilla_id          varchar(20)  [ref: > plantilla.id_plantilla]
  observaciones         varchar(500)
  dias_estimados        integer      [default: 1]
  cantidad_trabajadores integer      [default: 1]
  horas_diarias         integer      [default: 8]
  comuna_grupo_id       varchar(32)  [ref: > comuna_grupo.id_cg]
  porcentaje_ganancia   numeric(5,2) [default: 15.00]
  precio_dia_trabajador numeric(10,2)[default: 60000.00]
}

// Materiales planeados para un proyecto (pre-ejecución).
// Si externo=true, el material no descuenta stock interno de Servi Elec.
// material_id puede ser NULL cuando el material es externo y aún no existe en el inventario.
Table proyecto_material {
  id_pm                   varchar(32)  [pk, note: "UUID hex. Reemplazó la PK compuesta en mig 09."]
  proyecto_id             varchar(20)  [not null, ref: > proyecto.id_proyecto]
  material_id             varchar(20)  [ref: > material.id_material, note: "NULL si material es externo nuevo"]
  cantidad_planeada       numeric(9,2) [not null, note: "CHECK > 0"]
  externo                 boolean      [not null, default: false]
  nombre_material_externo varchar(200) [note: "Solo si externo=true y material_id IS NULL"]
  precio_unitario_externo numeric(12,2)[note: "Solo si externo=true y material_id IS NULL"]
}


// ─── NOTIFICACIONES ──────────────────────────────────────────────────

// Notificaciones in-app para usuarios (stock bajo, nuevas solicitudes, etc.).
Table notificacion {
  id_notificacion varchar(15)  [pk]
  usuario_id      varchar(15)  [not null, ref: > usuario.id_usuario]
  tipo            varchar(50)  [not null, note: "Ej: stock_bajo, nueva_solicitud"]
  titulo          varchar(200) [not null]
  mensaje         text         [not null]
  leida           boolean      [not null, default: false]
  creada_en       timestamp    [not null, default: "NOW()"]
}
